traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:26: error: Unmatched closing brace '}' ignored here
    }
    ^